<resources>
    <string name="app_name">Happy Macro</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="button_text">sign up</string>
    <string name="title_activity_goal2">goal2</string>
    <string name="first_name">first name</string>
    <string name="last_name">last name</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="passwordagain">passwordagain</string>
    <string name="we_can_do_this">We can do this,</string>
    <string name="but_we_need_a_little_info">but we need a little info</string>
    <string name="macro">Macro</string>
    <string name="happy">Happy</string>
    <string name="next">next</string>
    <string name="we_are_happy_to_see_you">We are happy to see you</string>
    <string name="welcome">Welcome</string>
    <string name="red_circle">red circle</string>
    <string name="back">back</string>
    <string name="Previous">Previous</string>
    <string name="title_activity_homepage">Homepage</string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string name="name">Name</string>
    <string name="current_weight">Current Weight</string>
    <string name="age">Age</string>
    <string name="height">Height</string>
    <string name="goal_weight">Goal Weight</string>
    <string name="let_s_pick_a_goal">Let\'s pick a goal</string>
    <string name="title_activity_tracker">Tracker</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="tracker">Tracker</string>
    <string name="account">Account</string>
    <string name="eggs_scrambled">Eggs (Scrambled)</string>
    <string name="wheat_toast_plain">Wheat Toast (Plain)</string>
    <string name="black_coffee">Black Coffee</string>
    <string name="item">Item</string>
    <string name="dashboard_messsage">You are what you eat so don\'t be fast, cheap, easy, or fake.</string>
    <string name="hey_john">Hey John</string>
    <string name="lets_do_this">"let's do this "</string>
    <string name="keep_going">"keep going "</string>
    <string name="almost_there">almost there</string>
    <string name="one_more_left">"one more left "</string>
    <string name="you_did_it">"you did it "</string>
    <string name="food_summary">"\t\tDaily Macros\n\n\t\t\t\t\t\t\t\t\t\t\t\t800 out of 1600 used\n\n\t\tMeal Summary\n\n\t\t\t\t\tAvocado Toast 350 calories\n\n\t\t\t\t\tOne Sheet Pan Chicken 450 Calories\n\n\t\tYou\'re just 800 away from your gaol\n\n\t\t\t\t\t\t\t\t\t\t\t\t\t\tWe got this!"</string>
    <string name="user">user</string>
    <string name="title_activity_summary">SummaryActivity</string>
    <string name="lets_do_this_keep_going_almost_there_one_more_left_you_did_it">Lets Do This! Keep Going! Almost There! One More Left! You Did It!</string>
    <string name="Summary">Summary</string>
    <string name="body_goals">Body Goals</string>
    <string name="body_goals_message">No matter the numbers, we are proud of you and we believe in you!</string>
    <string name="weight">Weight</string>
    <string name="muscle_mass">Muscle Mass</string>
    <string name="_67">67%</string>
    <string name="_210_lb">210 lb</string>
    <string name="_81">81%</string>
    <string name="_150_lb">150 lb</string>
    <string name="exercise">Exercise</string>
    <string name="body_fat">Body Fat</string>
    <string name="_33">33%</string>
    <string name="_19">19%</string>
    <string name="_120_min">120 min</string>
    <string name="_80_min">80 min</string>
    <string name="barcode">barcode</string>
    <string name="_182">182</string>
    <string name="_69">69</string>
    <string name="_3">3</string>
    <string name="turkey_breakfast_sausage">Turkey Breakfast Sausage</string>
    <string name="_366">366</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
