<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/seekBar5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#4AF4DEB3"
    tools:context=".BodyGaols">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:background="#1D6D8B"
        app:itemIconTint="#0D2A55"
        app:itemTextColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_menu">

    </com.google.android.material.bottomnavigation.BottomNavigationView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="407dp"
        android:layout_height="96dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/page_headings"
        android:fontFamily="@font/croissantone"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/body_goals"
        android:textAlignment="gravity"
        android:textColor="#050505"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageButton2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <SeekBar
        android:id="@+id/seekBar2"
        android:layout_width="425dp"
        android:layout_height="24dp"
        android:layout_marginTop="13dp"
        android:max="210"
        android:progress="150"
        android:progressDrawable="@drawable/seek_bar"
        android:thumb="@drawable/seek_thumb"
        android:thumbTint="#040303"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <View
        android:id="@+id/view3"
        android:layout_width="2dp"
        android:layout_height="30dp"
        android:background="#050505"
        tools:layout_editor_absoluteX="395dp"
        tools:layout_editor_absoluteY="286dp" />

    <SeekBar
        android:id="@+id/seekBar3"
        android:layout_width="425dp"
        android:layout_height="24dp"
        android:layout_marginTop="9dp"
        android:max="33"
        android:progress="19"
        android:progressDrawable="@drawable/seek_bar"
        android:thumb="@drawable/seek_thumb"
        android:thumbTint="#040303"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/textView"
        android:layout_alignBottom="@id/textView"
        android:layout_marginStart="344dp"
        android:layout_marginTop="24dp"
        android:accessibilityLiveRegion="none"
        android:background="#EEA76F"
        android:contentDescription="@string/user"
        android:minHeight="32dp"
        android:onClick="userInfo"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_person_24" />


    <SeekBar
        android:id="@id/seekBar4"
        android:layout_width="425dp"
        android:layout_height="24dp"
        android:layout_marginTop="7dp"
        android:max="81"
        android:progress="67"
        android:progressDrawable="@drawable/seek_bar"
        android:thumb="@drawable/seek_thumb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginStart="176dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="177dp"
        android:fontFamily="@font/craftygirls"
        android:text="@string/body_goals_message"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <SeekBar
        android:layout_width="425dp"
        android:layout_height="24dp"
        android:max="120"
        android:progress="80"
        android:progressDrawable="@drawable/seek_bar"
        android:thumb="@drawable/seek_thumb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView20" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="100dp"
        android:layout_height="29dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/craftygirls"
        android:text="@string/weight"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/craftygirls"
        android:text="@string/muscle_mass"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="444dp" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="6dp"
        android:fontFamily="@font/croissantone"
        android:text="@string/_81"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view5" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:fontFamily="@font/croissantone"
        android:text="@string/_150_lb"
        android:textAlignment="center"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3" />


    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/craftygirls"
        android:text="@string/exercise"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="566dp" />

    <View
        android:id="@+id/view6"
        android:layout_width="2dp"
        android:layout_height="40dp"
        android:background="#050505"
        tools:layout_editor_absoluteX="392dp"
        tools:layout_editor_absoluteY="606dp" />

    <View
        android:id="@+id/view4"
        android:layout_width="2dp"
        android:layout_height="40dp"
        android:layout_marginTop="384dp"
        android:layout_marginEnd="16dp"
        android:background="#050505"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view5"
        android:layout_width="2dp"
        android:layout_height="40dp"
        android:layout_marginTop="492dp"
        android:layout_marginEnd="16dp"
        android:background="#050505"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/craftygirls"
        android:text="@string/body_fat"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="334dp" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:fontFamily="@font/croissantone"
        android:text="@string/_19"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view4" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="6dp"
        android:fontFamily="@font/croissantone"
        android:text="@string/_120_min"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view6" />


</androidx.constraintlayout.widget.ConstraintLayout>